# TalkHub

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  talkhub_db.xml
src/talkhub/: manage.py
src/talkhub/accounts/: admin.py  tests.py
src/talkhub/accounts/migrations/: 0001_initial.py  0002_populate_tables_with_defaults.py  0003_alter_profile_id.py  0003_emailconfirmationcode_expiration_and_more.py  0004_alter_profile_about.py  0004_alter_profile_id.py
src/talkhub/accounts/models/: __init__.py  country.py  email_confirmation_code.py  managers.py  profile.py  user.py
src/talkhub/accounts/presentation/: urls.py  validators.py
src/talkhub/core/: admin.py  utils.py
src/talkhub/core/business_logic/: exceptions.py
src/talkhub/core/migrations/: 0001_initial.py  0002_populate_tables_with_defaults.py  0003_alter_config_user_alter_tweet_id.py  0003_alter_tweet_tags.py  0004_alter_notificationtype_name.py  0004_alter_tweet_parent_tweet.py  0005_config.py  0005_rename_users_notification_recipients_and_more.py  0006_alter_config_tweets_order.py  0006_alter_retweet_unique_together.py  0007_tweet_retweet_count.py
src/talkhub/core/models/: __init__.py  config.py  notification.py  notification_type.py  rating.py  retweet.py  tag.py  tweet.py  tweet_rating.py
src/talkhub/core/presentation/: common.py  urls.py
src/talkhub/static/css/: base.css
src/talkhub/talkhub/: asgi.py  settings.py  urls.py  wsgi.py
src/talkhub/talkhub/populate_db/: __init__.py  (+5 more)
src/talkhub/templates/: base.html
(+131 files in other folders)
